// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generator - app help should print expected information 1`] = `
"Usage: jhipster app [options]

[Default] Create a new JHipster application based on the selected options

Options:
  --auto-crlf                              Detect line endings
  --skip-cache                             Do not remember prompt answers (default: false)
  --skip-install                           Do not automatically install dependencies (default: false)
  --force-install                          Fail on install dependencies error (default: false)
  --ask-answered                           Show prompts for already configured options (default: false)
  --skip-prompts                           Skip prompts
  --defaults                               Execute jhipster with default config (default: false)
  --base-name <value>                      Application base name
  --application-type <value>               Application type to generate
  --client-framework <value>               Provide client framework for the application
  --skip-client                            Skip the client-side application generation
  --skip-server                            Skip the server-side application generation
  --skip-commit-hook                       Skip adding husky commit hooks
  --skip-user-management                   Skip the user management module during app generation
  --skip-check-length-of-identifier        Skip check the length of the identifier, only for recent Oracle databases that support 30+ characters metadata
  --skip-fake-data                         Skip generation of fake data for development
  -e, --with-entities                      Regenerate the existing entities if any
  --jhi-prefix <value>                     Add prefix before services, controllers and states name
  --entity-suffix <value>                  Add suffix after entities name
  --dto-suffix <value>                     Add suffix after dtos name
  --auth <value>                           Provide authentication type for the application when skipping server side generation
  --db <value>                             Provide DB name for the application when skipping server side generation
  --build <value>                          Provide build tool for the application when skipping server side generation
  --websocket <value>                      Provide websocket option for the application when skipping server side generation
  --search-engine <value>                  Provide search engine for the application when skipping server side generation
  --blueprint <value>                      DEPRECATED: Specify a generator blueprint to use for the sub generators
  --blueprints <value>                     A comma separated list of one or more generator blueprints to use for the sub generators, e.g. --blueprints kotlin,vuejs
  --creation-timestamp <value>             Project creation timestamp (used for reproducible builds)
  --incremental-changelog                  Creates incremental database changelogs
  --recreate-initial-changelog             Recreate the initial database changelog based on the current config
  --legacy-db-names                        Generate database names with jhipster 6 compatibility.
  --ignore-errors                          Don't fail on prettier errors.
  -n, --native-language [value]            Set application native language
  --enable-translation                     Enable translation
  -l, --language <value...>                Language to be added to application (existing languages are not removed)
  --pk-type <value>                        Default primary key type (beta)
  --reproducible                           Try to reproduce changelog
  --client-package-manager <value>         Force an unsupported client package manager
  --cypress-coverage                       Enable Cypress code coverage report generation
  --cypress-audit                          Enable cypress-audit/lighthouse report generation
  --microfrontend                          Force generation of experimental microfrontend support
  --test-frameworks <value...>             Test frameworks to be generated
  --reactive                               Generate a reactive backend
  --enable-swagger-codegen                 API first development using OpenAPI-generator
  --cache-provider <value>                 Cache provider
  --enable-hibernate-cache                 Enable hibernate cache
  --jhipster-dependencies-version <value>  jhipster-dependencies version to use, this option is not persisted (env: JHIPSTER_DEPENDENCIES_VERSION)
  --project-version <value>                project version to use, this option is not persisted (env: JHI_PROJECT_VERSION)
  --message-broker <value>                 message brooker
  --with-generated-flag                    Add a GeneratedByJHipster annotation to all generated java classes and interfaces
  --prettier-tab-width                     Default tab width for prettier
  --with-admin-ui                          Generate administrative user interface
  --skip-git                               Skip git repository initialization
  --monorepository                         Use monorepository
  -h, --help                               display help for command
"
`;

exports[`generator - app with default config should match snapshot 1`] = `
{
  "ANGULAR": "angular",
  "CLIENT_WEBPACK_DIR": "webpack/",
  "DOCUMENTATION_ARCHIVE_PATH": "/documentation-archive/",
  "DOCUMENTATION_URL": "https://www.jhipster.tech",
  "JAVA_COMPATIBLE_VERSIONS": [
    "17",
    "18",
    "19",
  ],
  "JAVA_VERSION": "JAVA_VERSION",
  "LOGIN_REGEX": "^(?>[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\.[a-zA-Z0-9-]+)*)|(?>[_.@A-Za-z0-9-]+)$",
  "MAIN_DIR": "src/main/",
  "REACT": "react",
  "SERVER_MAIN_RES_DIR": "src/main/resources/",
  "SERVER_MAIN_SRC_DIR": "src/main/java/",
  "SERVER_TEST_RES_DIR": "src/test/resources/",
  "SERVER_TEST_SRC_DIR": "src/test/java/",
  "TEST_DIR": "src/test/",
  "VUE": "vue",
  "addSpringMilestoneRepository": false,
  "angularLocaleId": "en",
  "applicationType": "monolith",
  "applicationTypeGateway": false,
  "applicationTypeMicroservice": false,
  "applicationTypeMonolith": true,
  "authenticationType": "jwt",
  "authenticationTypeJwt": true,
  "authenticationTypeOauth2": false,
  "authenticationTypeSession": false,
  "authenticationUsesCsrf": false,
  "backendType": "Java",
  "baseName": "jhipster",
  "blueprints": [],
  "buildTool": "maven",
  "buildToolGradle": false,
  "buildToolMaven": true,
  "buildToolUnknown": false,
  "cacheProvider": "ehcache",
  "cacheProviderAny": true,
  "cacheProviderCaffeine": false,
  "cacheProviderEhcache": true,
  "cacheProviderHazelcast": false,
  "cacheProviderInfinispan": false,
  "cacheProviderMemcached": false,
  "cacheProviderNo": false,
  "cacheProviderRedis": false,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "clientDistDir": "target/classes/static/",
  "clientFramework": "angular",
  "clientFrameworkAngular": true,
  "clientFrameworkAny": true,
  "clientFrameworkNo": false,
  "clientFrameworkReact": false,
  "clientFrameworkVue": false,
  "clientPackageManager": "npm",
  "clientSrcDir": "src/main/webapp/",
  "clientTestDir": "src/test/javascript/",
  "clientTheme": "none",
  "clientThemeDark": false,
  "clientThemeLight": false,
  "clientThemeNone": true,
  "clientThemePrimary": false,
  "clientThemeVariant": "",
  "communicationSpringWebsocket": false,
  "cucumberTests": false,
  "cypressTests": false,
  "dasherizedBaseName": "jhipster",
  "databaseMigration": undefined,
  "databaseMigrationLiquibase": true,
  "databaseType": "sql",
  "databaseTypeAny": true,
  "databaseTypeCassandra": false,
  "databaseTypeCouchbase": false,
  "databaseTypeMariadb": false,
  "databaseTypeMongodb": false,
  "databaseTypeMysql": false,
  "databaseTypeNeo4j": false,
  "databaseTypeNo": false,
  "databaseTypePostgres": true,
  "databaseTypeSql": true,
  "defaultEnvironment": "prod",
  "defaultPackaging": "jar",
  "devDatabaseExtraOptions": "",
  "devDatabasePassword": "",
  "devDatabaseType": "h2Disk",
  "devDatabaseTypeH2Any": true,
  "devDatabaseTypeH2Disk": true,
  "devDatabaseTypeH2Memory": false,
  "devDatabaseTypeMariadb": false,
  "devDatabaseTypeMssql": false,
  "devDatabaseTypeMysql": false,
  "devDatabaseTypeOracle": false,
  "devDatabaseTypePostgres": false,
  "devDatabaseUsername": "jhipster",
  "devHibernateDialect": "org.hibernate.dialect.H2Dialect",
  "devJdbcDriver": "org.h2.Driver",
  "devJdbcUrl": "jdbc:h2:file:./target/h2db/db/jhipster;DB_CLOSE_DELAY=-1",
  "devLiquibaseUrl": "jdbc:h2:file:\${project.build.directory}/h2db/db/jhipster",
  "devServerPort": 4200,
  "dockerContainers": {
    "apachepulsar/pulsar": "apachepulsar-pulsar-placeholder",
    "cassandra": "cassandra-placeholder",
    "cassandraImage": "cassandra-image-placeholder",
    "cassandraTag": "cassandra-tag-placeholder",
    "confluentinc/cp-kafka": "confluentinc-cp-kafka-placeholder",
    "confluentinc/cp-zookeeper": "confluentinc-cp-zookeeper-placeholder",
    "consul": "consul-placeholder",
    "consulConfigLoader": "consul-config-loader-placeholder",
    "consulConfigLoaderImage": "consul-config-loader-image-placeholder",
    "consulConfigLoaderTag": "consul-config-loader-tag-placeholder",
    "consulImage": "consul-image-placeholder",
    "consulTag": "consul-tag-placeholder",
    "couchbase": "couchbase-placeholder",
    "couchbase/server": "couchbase-server-placeholder",
    "couchbaseImage": "couchbase-image-placeholder",
    "couchbaseTag": "couchbase-tag-placeholder",
    "docker.io/bitnami/consul": "docker-io-bitnami-consul-placeholder",
    "eclipse-temurin": "eclipse-temurin-placeholder",
    "eclipseTemurin": "eclipse-temurin-placeholder",
    "eclipseTemurinImage": "eclipse-temurin-image-placeholder",
    "eclipseTemurinTag": "eclipse-temurin-tag-placeholder",
    "elasticsearch": "elasticsearch-placeholder",
    "elasticsearchImage": "elasticsearch-image-placeholder",
    "elasticsearchTag": "elasticsearch-tag-placeholder",
    "grafana": "grafana-placeholder",
    "grafana/grafana": "grafana-grafana-placeholder",
    "grafanaImage": "grafana-image-placeholder",
    "grafanaTag": "grafana-tag-placeholder",
    "grafanaWatcher": "grafana-watcher-placeholder",
    "grafanaWatcherImage": "grafana-watcher-image-placeholder",
    "grafanaWatcherTag": "grafana-watcher-tag-placeholder",
    "hazelcast": "hazelcast-placeholder",
    "hazelcast/management-center": "hazelcast-management-center-placeholder",
    "hazelcastImage": "hazelcast-image-placeholder",
    "hazelcastTag": "hazelcast-tag-placeholder",
    "javaJre": "java-jre-placeholder",
    "javaJreImage": "java-jre-image-placeholder",
    "javaJreTag": "java-jre-tag-placeholder",
    "jenkins": "jenkins-placeholder",
    "jenkins/jenkins": "jenkins-jenkins-placeholder",
    "jenkinsImage": "jenkins-image-placeholder",
    "jenkinsTag": "jenkins-tag-placeholder",
    "jhipster/consul-config-loader": "jhipster-consul-config-loader-placeholder",
    "jhipster/jhipster-control-center": "jhipster-jhipster-control-center-placeholder",
    "jhipster/jhipster-registry": "jhipster-jhipster-registry-placeholder",
    "jhipsterControlCenter": "jhipster-control-center-placeholder",
    "jhipsterControlCenterImage": "jhipster-control-center-image-placeholder",
    "jhipsterControlCenterTag": "jhipster-control-center-tag-placeholder",
    "jhipsterRegistry": "jhipster-registry-placeholder",
    "jhipsterRegistryImage": "jhipster-registry-image-placeholder",
    "jhipsterRegistryTag": "jhipster-registry-tag-placeholder",
    "kafka": "kafka-placeholder",
    "kafkaImage": "kafka-image-placeholder",
    "kafkaTag": "kafka-tag-placeholder",
    "keycloak": "keycloak-placeholder",
    "keycloakImage": "keycloak-image-placeholder",
    "keycloakTag": "keycloak-tag-placeholder",
    "mariadb": "mariadb-placeholder",
    "mariadbImage": "mariadb-image-placeholder",
    "mariadbTag": "mariadb-tag-placeholder",
    "mcr.microsoft.com/mssql/server": "mcr-microsoft-com-mssql-server-placeholder",
    "memcached": "memcached-placeholder",
    "memcachedImage": "memcached-image-placeholder",
    "memcachedTag": "memcached-tag-placeholder",
    "mongo": "mongo-placeholder",
    "mongoImage": "mongo-image-placeholder",
    "mongoTag": "mongo-tag-placeholder",
    "mongodb": "mongodb-placeholder",
    "mongodbImage": "mongodb-image-placeholder",
    "mongodbTag": "mongodb-tag-placeholder",
    "mssql": "mssql-placeholder",
    "mssqlImage": "mssql-image-placeholder",
    "mssqlTag": "mssql-tag-placeholder",
    "mysql": "mysql-placeholder",
    "mysqlImage": "mysql-image-placeholder",
    "mysqlTag": "mysql-tag-placeholder",
    "neo4J": "neo-4-j-placeholder",
    "neo4JImage": "neo-4-j-image-placeholder",
    "neo4JTag": "neo-4-j-tag-placeholder",
    "neo4j": "neo-4-j-placeholder",
    "openzipkin/zipkin": "openzipkin-zipkin-placeholder",
    "postgres": "postgres-placeholder",
    "postgresImage": "postgres-image-placeholder",
    "postgresTag": "postgres-tag-placeholder",
    "postgresql": "postgresql-placeholder",
    "postgresqlImage": "postgresql-image-placeholder",
    "postgresqlTag": "postgresql-tag-placeholder",
    "prom/alertmanager": "prom-alertmanager-placeholder",
    "prom/prometheus": "prom-prometheus-placeholder",
    "prometheus": "prometheus-placeholder",
    "prometheusAlertmanager": "prometheus-alertmanager-placeholder",
    "prometheusAlertmanagerImage": "prometheus-alertmanager-image-placeholder",
    "prometheusAlertmanagerTag": "prometheus-alertmanager-tag-placeholder",
    "prometheusImage": "prometheus-image-placeholder",
    "prometheusOperator": "prometheus-operator-placeholder",
    "prometheusOperatorImage": "prometheus-operator-image-placeholder",
    "prometheusOperatorTag": "prometheus-operator-tag-placeholder",
    "prometheusTag": "prometheus-tag-placeholder",
    "pulsar": "pulsar-placeholder",
    "pulsarImage": "pulsar-image-placeholder",
    "pulsarTag": "pulsar-tag-placeholder",
    "quay.io/coreos/grafana-watcher": "quay-io-coreos-grafana-watcher-placeholder",
    "quay.io/coreos/prometheus-operator": "quay-io-coreos-prometheus-operator-placeholder",
    "quay.io/keycloak/keycloak": "quay-io-keycloak-keycloak-placeholder",
    "redis": "redis-placeholder",
    "redisImage": "redis-image-placeholder",
    "redisTag": "redis-tag-placeholder",
    "sonar": "sonar-placeholder",
    "sonarImage": "sonar-image-placeholder",
    "sonarTag": "sonar-tag-placeholder",
    "sonarqube": "sonarqube-placeholder",
    "sonarqubeImage": "sonarqube-image-placeholder",
    "sonarqubeTag": "sonarqube-tag-placeholder",
    "swaggerEditor": "swagger-editor-placeholder",
    "swaggerEditorImage": "swagger-editor-image-placeholder",
    "swaggerEditorTag": "swagger-editor-tag-placeholder",
    "swaggerapi/swagger-editor": "swaggerapi-swagger-editor-placeholder",
    "zipkin": "zipkin-placeholder",
    "zipkinImage": "zipkin-image-placeholder",
    "zipkinTag": "zipkin-tag-placeholder",
    "zookeeper": "zookeeper-placeholder",
    "zookeeperImage": "zookeeper-image-placeholder",
    "zookeeperTag": "zookeeper-tag-placeholder",
  },
  "dockerServicesDir": "src/main/docker/",
  "domains": [
    "com.mycompany.myapp",
  ],
  "dtoSuffix": "DTO",
  "embeddableLaunchScript": undefined,
  "enableGradleEnterprise": false,
  "enableHibernateCache": true,
  "enableI18nRTL": false,
  "enableSwaggerCodegen": false,
  "enableTranslation": true,
  "endpointPrefix": "",
  "entitySuffix": "",
  "fakerSeed": undefined,
  "frontendAppName": "jhipsterApp",
  "gatewayServerPort": undefined,
  "gatlingTests": false,
  "generateAuthenticationApi": true,
  "generateBuiltInAuthorityEntity": true,
  "generateBuiltInUserEntity": true,
  "generateInMemoryUserCredentials": false,
  "generateUserManagement": true,
  "gradleVersion": "GRADLE_VERSION",
  "hipster": "jhipster_family_member_3",
  "humanizedBaseName": "JHipster",
  "imperativeOrReactive": "imperative",
  "incrementalChangelog": undefined,
  "javaDependencies": {
    "archunit-junit5": "'ARCHUNIT-JUNIT-5-VERSION'",
    "awaitility": "'AWAITILITY-VERSION'",
    "blockhound-junit-platform": "'BLOCKHOUND-JUNIT-PLATFORM-VERSION'",
    "cassandra": "'CASSANDRA-VERSION'",
    "checkstyle": "'CHECKSTYLE-VERSION'",
    "checksum-maven-plugin": "'CHECKSUM-MAVEN-PLUGIN-VERSION'",
    "common-custom-user-data-gradle-plugin": "'COMMON-CUSTOM-USER-DATA-GRADLE-PLUGIN-VERSION'",
    "commons-beanutils": "'COMMONS-BEANUTILS-VERSION'",
    "frontend-maven-plugin": "'FRONTEND-MAVEN-PLUGIN-VERSION'",
    "gatling": "'GATLING-VERSION'",
    "gatling-gradle": "'GATLING-GRADLE-VERSION'",
    "gatling-maven-plugin": "'GATLING-MAVEN-PLUGIN-VERSION'",
    "git-commit-id-plugin": "'GIT-COMMIT-ID-PLUGIN-VERSION'",
    "gradle-enterprise": "'GRADLE-ENTERPRISE-VERSION'",
    "gradle-git-properties": "'GRADLE-GIT-PROPERTIES-VERSION'",
    "gradle-liquibase": "'GRADLE-LIQUIBASE-VERSION'",
    "gradle-modernizer-plugin": "'GRADLE-MODERNIZER-PLUGIN-VERSION'",
    "gradle-sonarqube": "'GRADLE-SONARQUBE-VERSION'",
    "hazelcast-hibernate53": "'HAZELCAST-HIBERNATE-53-VERSION'",
    "hazelcast-spring": "'HAZELCAST-SPRING-VERSION'",
    "hibernate": "'HIBERNATE-VERSION'",
    "jackson-databind-nullable": "'JACKSON-DATABIND-NULLABLE-VERSION'",
    "jacoco-maven-plugin": "'JACOCO-MAVEN-PLUGIN-VERSION'",
    "jaxb-runtime": "'JAXB-RUNTIME-VERSION'",
    "jib-maven-plugin": "'JIB-MAVEN-PLUGIN-VERSION'",
    "junit-platform-launcher": "'JUNIT-PLATFORM-LAUNCHER-VERSION'",
    "lifecycle-mapping": "'LIFECYCLE-MAPPING-VERSION'",
    "liquibase": "'LIQUIBASE-VERSION'",
    "mapstruct": "'MAPSTRUCT-VERSION'",
    "maven-antrun-plugin": "'MAVEN-ANTRUN-PLUGIN-VERSION'",
    "maven-checkstyle-plugin": "'MAVEN-CHECKSTYLE-PLUGIN-VERSION'",
    "maven-clean-plugin": "'MAVEN-CLEAN-PLUGIN-VERSION'",
    "maven-compiler-plugin": "'MAVEN-COMPILER-PLUGIN-VERSION'",
    "maven-eclipse-plugin": "'MAVEN-ECLIPSE-PLUGIN-VERSION'",
    "maven-enforcer-plugin": "'MAVEN-ENFORCER-PLUGIN-VERSION'",
    "maven-failsafe-plugin": "'MAVEN-FAILSAFE-PLUGIN-VERSION'",
    "maven-idea-plugin": "'MAVEN-IDEA-PLUGIN-VERSION'",
    "maven-jar-plugin": "'MAVEN-JAR-PLUGIN-VERSION'",
    "maven-javadoc-plugin": "'MAVEN-JAVADOC-PLUGIN-VERSION'",
    "maven-resources-plugin": "'MAVEN-RESOURCES-PLUGIN-VERSION'",
    "maven-site-plugin": "'MAVEN-SITE-PLUGIN-VERSION'",
    "maven-surefire-plugin": "'MAVEN-SUREFIRE-PLUGIN-VERSION'",
    "maven-war-plugin": "'MAVEN-WAR-PLUGIN-VERSION'",
    "modernizer-maven-plugin": "'MODERNIZER-MAVEN-PLUGIN-VERSION'",
    "node-gradle": "'NODE-GRADLE-VERSION'",
    "nohttp-checkstyle": "'NOHTTP-CHECKSTYLE-VERSION'",
    "openapi-generator-maven-plugin": "'OPENAPI-GENERATOR-MAVEN-PLUGIN-VERSION'",
    "properties-maven-plugin": "'PROPERTIES-MAVEN-PLUGIN-VERSION'",
    "r2dbc-mariadb": "'R-2-DBC-MARIADB-VERSION'",
    "r2dbc-mysql": "'R-2-DBC-MYSQL-VERSION'",
    "sonar-maven-plugin": "'SONAR-MAVEN-PLUGIN-VERSION'",
    "spring-boot": "'SPRING-BOOT-VERSION'",
    "spring-pulsar": "'SPRING-PULSAR-VERSION'",
    "typesafe": "'TYPESAFE-VERSION'",
    "validation-api": "'VALIDATION-API-VERSION'",
  },
  "javaPackageSrcDir": "src/main/java/com/mycompany/myapp/",
  "javaPackageTestDir": "src/test/java/com/mycompany/myapp/",
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhiTablePrefix": "jhi",
  "jhipsterDependenciesVersion": "JHIPSTER_DEPENDENCIES_VERSION",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": Any<String>,
  "jwtSecretKey": "SECRET--64",
  "languages": [
    "en",
    "fr",
  ],
  "languagesDefinition": [
    {
      "angularLocale": "en",
      "dayjsLocale": "en",
      "displayName": "English",
      "fakerjsLocale": "en",
      "javaLocaleMessageSourceSuffix": "en",
      "languageTag": "en",
      "name": "English",
      "rtl": false,
    },
    {
      "angularLocale": "fr",
      "dayjsLocale": "fr",
      "displayName": "Français",
      "fakerjsLocale": "fr",
      "javaLocaleMessageSourceSuffix": "fr",
      "languageTag": "fr",
      "name": "French",
      "rtl": false,
    },
  ],
  "lowercaseBaseName": "jhipster",
  "mainClass": "JhipsterApp",
  "mainJavaDir": "src/main/java/",
  "mainJavaPackageDir": "src/main/java/com/mycompany/myapp/",
  "mainJavaResourceDir": "src/main/resources/",
  "messageBroker": "no",
  "messageBrokerAny": false,
  "messageBrokerKafka": false,
  "messageBrokerPulsar": false,
  "microfrontend": false,
  "microfrontends": [],
  "nativeLanguage": "en",
  "nativeLanguageDefinition": {
    "angularLocale": "en",
    "dayjsLocale": "en",
    "displayName": "English",
    "fakerjsLocale": "en",
    "javaLocaleMessageSourceSuffix": "en",
    "languageTag": "en",
    "name": "English",
    "rtl": false,
  },
  "nodeDependencies": {
    "@angular-architects/module-federation-runtime": "ANGULAR_ARCHITECTS_MODULE_FEDERATION_RUNTIME_VERSION",
    "@angular-builders/custom-webpack": "ANGULAR_BUILDERS_CUSTOM_WEBPACK_VERSION",
    "@angular-builders/jest": "ANGULAR_BUILDERS_JEST_VERSION",
    "@angular-eslint/eslint-plugin": "ANGULAR_ESLINT_ESLINT_PLUGIN_VERSION",
    "@angular/cli": "ANGULAR_CLI_VERSION",
    "@angular/common": "ANGULAR_COMMON_VERSION",
    "@cypress/code-coverage": "CYPRESS_CODE_COVERAGE_VERSION",
    "@fortawesome/angular-fontawesome": "FORTAWESOME_ANGULAR_FONTAWESOME_VERSION",
    "@fortawesome/fontawesome-svg-core": "FORTAWESOME_FONTAWESOME_SVG_CORE_VERSION",
    "@fortawesome/free-solid-svg-icons": "FORTAWESOME_FREE_SOLID_SVG_ICONS_VERSION",
    "@ng-bootstrap/ng-bootstrap": "NG_BOOTSTRAP_NG_BOOTSTRAP_VERSION",
    "@ngx-translate/core": "NGX_TRANSLATE_CORE_VERSION",
    "@ngx-translate/http-loader": "NGX_TRANSLATE_HTTP_LOADER_VERSION",
    "@popperjs/core": "POPPERJS_CORE_VERSION",
    "@types/jest": "TYPES_JEST_VERSION",
    "@types/node": "TYPES_NODE_VERSION",
    "@typescript-eslint/eslint-plugin": "TYPESCRIPT_ESLINT_ESLINT_PLUGIN_VERSION",
    "babel-loader": "BABEL_LOADER_VERSION",
    "babel-plugin-istanbul": "BABEL_PLUGIN_ISTANBUL_VERSION",
    "bootstrap": "BOOTSTRAP_VERSION",
    "bootswatch": "BOOTSWATCH_VERSION",
    "browser-sync": "BROWSER_SYNC_VERSION",
    "browser-sync-webpack-plugin": "BROWSER_SYNC_WEBPACK_PLUGIN_VERSION",
    "concurrently": "CONCURRENTLY_VERSION",
    "copy-webpack-plugin": "COPY_WEBPACK_PLUGIN_VERSION",
    "cypress": "CYPRESS_VERSION",
    "cypress-audit": "CYPRESS_AUDIT_VERSION",
    "dayjs": "DAYJS_VERSION",
    "eslint": "ESLINT_VERSION",
    "eslint-config-prettier": "ESLINT_CONFIG_PRETTIER_VERSION",
    "eslint-plugin-cypress": "ESLINT_PLUGIN_CYPRESS_VERSION",
    "eslint-webpack-plugin": "ESLINT_WEBPACK_PLUGIN_VERSION",
    "folder-hash": "FOLDER_HASH_VERSION",
    "husky": "HUSKY_VERSION",
    "jest": "JEST_VERSION",
    "jest-date-mock": "JEST_DATE_MOCK_VERSION",
    "jest-junit": "JEST_JUNIT_VERSION",
    "jest-preset-angular": "JEST_PRESET_ANGULAR_VERSION",
    "jest-sonar": "JEST_SONAR_VERSION",
    "lighthouse": "LIGHTHOUSE_VERSION",
    "lint-staged": "LINT_STAGED_VERSION",
    "merge-jsons-webpack-plugin": "MERGE_JSONS_WEBPACK_PLUGIN_VERSION",
    "ngx-cookie-service": "NGX_COOKIE_SERVICE_VERSION",
    "ngx-infinite-scroll": "NGX_INFINITE_SCROLL_VERSION",
    "npm": "NPM_VERSION",
    "nyc": "NYC_VERSION",
    "postcss-rtlcss": "POSTCSS_RTLCSS_VERSION",
    "prettier": "PRETTIER_VERSION",
    "prettier-plugin-java": "PRETTIER_PLUGIN_JAVA_VERSION",
    "prettier-plugin-packagejson": "PRETTIER_PLUGIN_PACKAGEJSON_VERSION",
    "rimraf": "RIMRAF_VERSION",
    "rxjs": "RXJS_VERSION",
    "swagger-ui-dist": "SWAGGER_UI_DIST_VERSION",
    "ts-jest": "TS_JEST_VERSION",
    "tslib": "TSLIB_VERSION",
    "typescript": "TYPESCRIPT_VERSION",
    "wait-on": "WAIT_ON_VERSION",
    "webpack": "WEBPACK_VERSION",
    "webpack-bundle-analyzer": "WEBPACK_BUNDLE_ANALYZER_VERSION",
    "webpack-merge": "WEBPACK_MERGE_VERSION",
    "webpack-notifier": "WEBPACK_NOTIFIER_VERSION",
    "zone.js": "ZONE_JS_VERSION",
  },
  "nodePackageManager": "npm",
  "nodeVersion": "NODE_VERSION",
  "packageFolder": "com/mycompany/myapp/",
  "packageInfoJavadocs": [
    {
      "documentation": "Logging aspect.",
      "packageName": "com.mycompany.myapp.aop.logging",
    },
    {
      "documentation": "Application management.",
      "packageName": "com.mycompany.myapp.management",
    },
    {
      "documentation": "Webflux database column mapper.",
      "packageName": "com.mycompany.myapp.repository.rowmapper",
    },
    {
      "documentation": "Application security utilities.",
      "packageName": "com.mycompany.myapp.security",
    },
    {
      "documentation": "Data transfer objects for rest mapping.",
      "packageName": "com.mycompany.myapp.service.dto",
    },
    {
      "documentation": "Data transfer objects mappers.",
      "packageName": "com.mycompany.myapp.service.mapper",
    },
    {
      "documentation": "Request chain filters.",
      "packageName": "com.mycompany.myapp.web.filter",
    },
    {
      "documentation": "Rest layer error handling.",
      "packageName": "com.mycompany.myapp.web.rest.errors",
    },
    {
      "documentation": "Rest layer visual models.",
      "packageName": "com.mycompany.myapp.web.rest.vm",
    },
  ],
  "packageName": "com.mycompany.myapp",
  "pages": [],
  "prettierExtensions": "md,json,yml,html,cjs,mjs,js,ts,tsx,css,scss,java",
  "prettierJava": undefined,
  "prettierTabWidth": 2,
  "prodDatabaseExtraOptions": "",
  "prodDatabasePassword": "",
  "prodDatabaseType": "postgresql",
  "prodDatabaseTypeH2Disk": false,
  "prodDatabaseTypeMariadb": false,
  "prodDatabaseTypeMssql": false,
  "prodDatabaseTypeMysql": false,
  "prodDatabaseTypeOracle": false,
  "prodDatabaseTypePostgres": true,
  "prodDatabaseUsername": "jhipster",
  "prodHibernateDialect": "org.hibernate.dialect.PostgreSQLDialect",
  "prodJdbcDriver": "org.postgresql.Driver",
  "prodJdbcUrl": "jdbc:postgresql://localhost:5432/jhipster",
  "prodLiquibaseUrl": "jdbc:postgresql://localhost:5432/jhipster",
  "projectDescription": "Description for JHipster",
  "projectVersion": "0.0.1-SNAPSHOT",
  "reactive": false,
  "rememberMeKey": undefined,
  "remotes": [],
  "searchEngine": "no",
  "searchEngineAny": false,
  "searchEngineCouchbase": false,
  "searchEngineElasticsearch": false,
  "searchEngineNo": true,
  "serverPort": 8080,
  "serviceDiscoveryAny": false,
  "serviceDiscoveryConsul": false,
  "serviceDiscoveryEureka": false,
  "serviceDiscoveryType": "no",
  "skipCheckLengthOfIdentifier": false,
  "skipClient": false,
  "skipCommitHook": undefined,
  "skipFakeData": false,
  "skipJhipsterDependencies": false,
  "skipServer": undefined,
  "skipUserManagement": false,
  "srcMainDir": "src/main/",
  "srcMainJava": "src/main/java/",
  "srcMainResources": "src/main/resources/",
  "srcMainWebapp": "src/main/webapp/",
  "srcTestDir": "src/test/",
  "srcTestJava": "src/test/java/",
  "srcTestJavascript": "src/test/javascript/",
  "srcTestResources": "src/test/resources/",
  "temporaryDir": "target/",
  "testFrameworks": [],
  "testJavaDir": "src/test/java/",
  "testJavaPackageDir": "src/test/java/com/mycompany/myapp/",
  "testResourceDir": "src/test/resources/",
  "upperFirstCamelCaseBaseName": "Jhipster",
  "user": Any<Object>,
  "webappEnumerationsDir": "src/main/webapp/app/entities/enumerations/",
  "webappLoginRegExp": "^[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\.[a-zA-Z0-9-]+)*$|^[_.@A-Za-z0-9-]+$",
  "websocket": "no",
  "withAdminUi": true,
}
`;

exports[`generator - app with gateway should match snapshot 1`] = `
{
  "ANGULAR": "angular",
  "CLIENT_WEBPACK_DIR": "webpack/",
  "DOCUMENTATION_ARCHIVE_PATH": "/documentation-archive/",
  "DOCUMENTATION_URL": "https://www.jhipster.tech",
  "JAVA_COMPATIBLE_VERSIONS": [
    "17",
    "18",
    "19",
  ],
  "JAVA_VERSION": "JAVA_VERSION",
  "LOGIN_REGEX": "^(?>[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\.[a-zA-Z0-9-]+)*)|(?>[_.@A-Za-z0-9-]+)$",
  "MAIN_DIR": "src/main/",
  "REACT": "react",
  "SERVER_MAIN_RES_DIR": "src/main/resources/",
  "SERVER_MAIN_SRC_DIR": "src/main/java/",
  "SERVER_TEST_RES_DIR": "src/test/resources/",
  "SERVER_TEST_SRC_DIR": "src/test/java/",
  "TEST_DIR": "src/test/",
  "VUE": "vue",
  "addSpringMilestoneRepository": false,
  "angularLocaleId": "en",
  "applicationType": "gateway",
  "applicationTypeGateway": true,
  "applicationTypeMicroservice": false,
  "applicationTypeMonolith": false,
  "authenticationType": "jwt",
  "authenticationTypeJwt": true,
  "authenticationTypeOauth2": false,
  "authenticationTypeSession": false,
  "authenticationUsesCsrf": false,
  "backendType": "Java",
  "baseName": "jhipster",
  "blueprints": [],
  "buildTool": "maven",
  "buildToolGradle": false,
  "buildToolMaven": true,
  "buildToolUnknown": false,
  "cacheProvider": "no",
  "cacheProviderAny": false,
  "cacheProviderCaffeine": false,
  "cacheProviderEhcache": false,
  "cacheProviderHazelcast": false,
  "cacheProviderInfinispan": false,
  "cacheProviderMemcached": false,
  "cacheProviderNo": true,
  "cacheProviderRedis": false,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "clientDistDir": "target/classes/static/",
  "clientFramework": "angular",
  "clientFrameworkAngular": true,
  "clientFrameworkAny": true,
  "clientFrameworkNo": false,
  "clientFrameworkReact": false,
  "clientFrameworkVue": false,
  "clientPackageManager": "npm",
  "clientSrcDir": "src/main/webapp/",
  "clientTestDir": "src/test/javascript/",
  "clientTheme": "none",
  "clientThemeDark": false,
  "clientThemeLight": false,
  "clientThemeNone": true,
  "clientThemePrimary": false,
  "clientThemeVariant": "",
  "communicationSpringWebsocket": false,
  "cucumberTests": false,
  "cypressTests": false,
  "dasherizedBaseName": "jhipster",
  "databaseMigration": undefined,
  "databaseMigrationLiquibase": true,
  "databaseType": "sql",
  "databaseTypeAny": true,
  "databaseTypeCassandra": false,
  "databaseTypeCouchbase": false,
  "databaseTypeMariadb": false,
  "databaseTypeMongodb": false,
  "databaseTypeMysql": false,
  "databaseTypeNeo4j": false,
  "databaseTypeNo": false,
  "databaseTypePostgres": true,
  "databaseTypeSql": true,
  "defaultEnvironment": "prod",
  "defaultPackaging": "jar",
  "devDatabaseExtraOptions": "",
  "devDatabasePassword": "",
  "devDatabaseType": "h2Disk",
  "devDatabaseTypeH2Any": true,
  "devDatabaseTypeH2Disk": true,
  "devDatabaseTypeH2Memory": false,
  "devDatabaseTypeMariadb": false,
  "devDatabaseTypeMssql": false,
  "devDatabaseTypeMysql": false,
  "devDatabaseTypeOracle": false,
  "devDatabaseTypePostgres": false,
  "devDatabaseUsername": "jhipster",
  "devHibernateDialect": "org.hibernate.dialect.H2Dialect",
  "devJdbcDriver": "org.h2.Driver",
  "devJdbcUrl": "jdbc:h2:file:./target/h2db/db/jhipster;DB_CLOSE_DELAY=-1",
  "devLiquibaseUrl": "jdbc:h2:file:\${project.build.directory}/h2db/db/jhipster",
  "devR2dbcUrl": "r2dbc:h2:file:///./target/h2db/db/jhipster;DB_CLOSE_DELAY=-1",
  "devServerPort": 4200,
  "dockerContainers": {
    "apachepulsar/pulsar": "apachepulsar-pulsar-placeholder",
    "cassandra": "cassandra-placeholder",
    "cassandraImage": "cassandra-image-placeholder",
    "cassandraTag": "cassandra-tag-placeholder",
    "confluentinc/cp-kafka": "confluentinc-cp-kafka-placeholder",
    "confluentinc/cp-zookeeper": "confluentinc-cp-zookeeper-placeholder",
    "consul": "consul-placeholder",
    "consulConfigLoader": "consul-config-loader-placeholder",
    "consulConfigLoaderImage": "consul-config-loader-image-placeholder",
    "consulConfigLoaderTag": "consul-config-loader-tag-placeholder",
    "consulImage": "consul-image-placeholder",
    "consulTag": "consul-tag-placeholder",
    "couchbase": "couchbase-placeholder",
    "couchbase/server": "couchbase-server-placeholder",
    "couchbaseImage": "couchbase-image-placeholder",
    "couchbaseTag": "couchbase-tag-placeholder",
    "docker.io/bitnami/consul": "docker-io-bitnami-consul-placeholder",
    "eclipse-temurin": "eclipse-temurin-placeholder",
    "eclipseTemurin": "eclipse-temurin-placeholder",
    "eclipseTemurinImage": "eclipse-temurin-image-placeholder",
    "eclipseTemurinTag": "eclipse-temurin-tag-placeholder",
    "elasticsearch": "elasticsearch-placeholder",
    "elasticsearchImage": "elasticsearch-image-placeholder",
    "elasticsearchTag": "elasticsearch-tag-placeholder",
    "grafana": "grafana-placeholder",
    "grafana/grafana": "grafana-grafana-placeholder",
    "grafanaImage": "grafana-image-placeholder",
    "grafanaTag": "grafana-tag-placeholder",
    "grafanaWatcher": "grafana-watcher-placeholder",
    "grafanaWatcherImage": "grafana-watcher-image-placeholder",
    "grafanaWatcherTag": "grafana-watcher-tag-placeholder",
    "hazelcast": "hazelcast-placeholder",
    "hazelcast/management-center": "hazelcast-management-center-placeholder",
    "hazelcastImage": "hazelcast-image-placeholder",
    "hazelcastTag": "hazelcast-tag-placeholder",
    "javaJre": "java-jre-placeholder",
    "javaJreImage": "java-jre-image-placeholder",
    "javaJreTag": "java-jre-tag-placeholder",
    "jenkins": "jenkins-placeholder",
    "jenkins/jenkins": "jenkins-jenkins-placeholder",
    "jenkinsImage": "jenkins-image-placeholder",
    "jenkinsTag": "jenkins-tag-placeholder",
    "jhipster/consul-config-loader": "jhipster-consul-config-loader-placeholder",
    "jhipster/jhipster-control-center": "jhipster-jhipster-control-center-placeholder",
    "jhipster/jhipster-registry": "jhipster-jhipster-registry-placeholder",
    "jhipsterControlCenter": "jhipster-control-center-placeholder",
    "jhipsterControlCenterImage": "jhipster-control-center-image-placeholder",
    "jhipsterControlCenterTag": "jhipster-control-center-tag-placeholder",
    "jhipsterRegistry": "jhipster-registry-placeholder",
    "jhipsterRegistryImage": "jhipster-registry-image-placeholder",
    "jhipsterRegistryTag": "jhipster-registry-tag-placeholder",
    "kafka": "kafka-placeholder",
    "kafkaImage": "kafka-image-placeholder",
    "kafkaTag": "kafka-tag-placeholder",
    "keycloak": "keycloak-placeholder",
    "keycloakImage": "keycloak-image-placeholder",
    "keycloakTag": "keycloak-tag-placeholder",
    "mariadb": "mariadb-placeholder",
    "mariadbImage": "mariadb-image-placeholder",
    "mariadbTag": "mariadb-tag-placeholder",
    "mcr.microsoft.com/mssql/server": "mcr-microsoft-com-mssql-server-placeholder",
    "memcached": "memcached-placeholder",
    "memcachedImage": "memcached-image-placeholder",
    "memcachedTag": "memcached-tag-placeholder",
    "mongo": "mongo-placeholder",
    "mongoImage": "mongo-image-placeholder",
    "mongoTag": "mongo-tag-placeholder",
    "mongodb": "mongodb-placeholder",
    "mongodbImage": "mongodb-image-placeholder",
    "mongodbTag": "mongodb-tag-placeholder",
    "mssql": "mssql-placeholder",
    "mssqlImage": "mssql-image-placeholder",
    "mssqlTag": "mssql-tag-placeholder",
    "mysql": "mysql-placeholder",
    "mysqlImage": "mysql-image-placeholder",
    "mysqlTag": "mysql-tag-placeholder",
    "neo4J": "neo-4-j-placeholder",
    "neo4JImage": "neo-4-j-image-placeholder",
    "neo4JTag": "neo-4-j-tag-placeholder",
    "neo4j": "neo-4-j-placeholder",
    "openzipkin/zipkin": "openzipkin-zipkin-placeholder",
    "postgres": "postgres-placeholder",
    "postgresImage": "postgres-image-placeholder",
    "postgresTag": "postgres-tag-placeholder",
    "postgresql": "postgresql-placeholder",
    "postgresqlImage": "postgresql-image-placeholder",
    "postgresqlTag": "postgresql-tag-placeholder",
    "prom/alertmanager": "prom-alertmanager-placeholder",
    "prom/prometheus": "prom-prometheus-placeholder",
    "prometheus": "prometheus-placeholder",
    "prometheusAlertmanager": "prometheus-alertmanager-placeholder",
    "prometheusAlertmanagerImage": "prometheus-alertmanager-image-placeholder",
    "prometheusAlertmanagerTag": "prometheus-alertmanager-tag-placeholder",
    "prometheusImage": "prometheus-image-placeholder",
    "prometheusOperator": "prometheus-operator-placeholder",
    "prometheusOperatorImage": "prometheus-operator-image-placeholder",
    "prometheusOperatorTag": "prometheus-operator-tag-placeholder",
    "prometheusTag": "prometheus-tag-placeholder",
    "pulsar": "pulsar-placeholder",
    "pulsarImage": "pulsar-image-placeholder",
    "pulsarTag": "pulsar-tag-placeholder",
    "quay.io/coreos/grafana-watcher": "quay-io-coreos-grafana-watcher-placeholder",
    "quay.io/coreos/prometheus-operator": "quay-io-coreos-prometheus-operator-placeholder",
    "quay.io/keycloak/keycloak": "quay-io-keycloak-keycloak-placeholder",
    "redis": "redis-placeholder",
    "redisImage": "redis-image-placeholder",
    "redisTag": "redis-tag-placeholder",
    "sonar": "sonar-placeholder",
    "sonarImage": "sonar-image-placeholder",
    "sonarTag": "sonar-tag-placeholder",
    "sonarqube": "sonarqube-placeholder",
    "sonarqubeImage": "sonarqube-image-placeholder",
    "sonarqubeTag": "sonarqube-tag-placeholder",
    "swaggerEditor": "swagger-editor-placeholder",
    "swaggerEditorImage": "swagger-editor-image-placeholder",
    "swaggerEditorTag": "swagger-editor-tag-placeholder",
    "swaggerapi/swagger-editor": "swaggerapi-swagger-editor-placeholder",
    "zipkin": "zipkin-placeholder",
    "zipkinImage": "zipkin-image-placeholder",
    "zipkinTag": "zipkin-tag-placeholder",
    "zookeeper": "zookeeper-placeholder",
    "zookeeperImage": "zookeeper-image-placeholder",
    "zookeeperTag": "zookeeper-tag-placeholder",
  },
  "dockerServicesDir": "src/main/docker/",
  "domains": [
    "com.mycompany.myapp",
  ],
  "dtoSuffix": "DTO",
  "embeddableLaunchScript": undefined,
  "enableGradleEnterprise": false,
  "enableHibernateCache": false,
  "enableI18nRTL": false,
  "enableSwaggerCodegen": false,
  "enableTranslation": true,
  "endpointPrefix": "",
  "entitySuffix": "",
  "fakerSeed": undefined,
  "frontendAppName": "jhipsterApp",
  "gatewayServerPort": undefined,
  "gatlingTests": false,
  "generateAuthenticationApi": true,
  "generateBuiltInAuthorityEntity": true,
  "generateBuiltInUserEntity": true,
  "generateInMemoryUserCredentials": false,
  "generateUserManagement": true,
  "gradleVersion": "GRADLE_VERSION",
  "hipster": "jhipster_family_member_3",
  "humanizedBaseName": "JHipster",
  "imperativeOrReactive": "reactive",
  "incrementalChangelog": undefined,
  "javaDependencies": {
    "archunit-junit5": "'ARCHUNIT-JUNIT-5-VERSION'",
    "awaitility": "'AWAITILITY-VERSION'",
    "blockhound-junit-platform": "'BLOCKHOUND-JUNIT-PLATFORM-VERSION'",
    "cassandra": "'CASSANDRA-VERSION'",
    "checkstyle": "'CHECKSTYLE-VERSION'",
    "checksum-maven-plugin": "'CHECKSUM-MAVEN-PLUGIN-VERSION'",
    "common-custom-user-data-gradle-plugin": "'COMMON-CUSTOM-USER-DATA-GRADLE-PLUGIN-VERSION'",
    "commons-beanutils": "'COMMONS-BEANUTILS-VERSION'",
    "frontend-maven-plugin": "'FRONTEND-MAVEN-PLUGIN-VERSION'",
    "gatling": "'GATLING-VERSION'",
    "gatling-gradle": "'GATLING-GRADLE-VERSION'",
    "gatling-maven-plugin": "'GATLING-MAVEN-PLUGIN-VERSION'",
    "git-commit-id-plugin": "'GIT-COMMIT-ID-PLUGIN-VERSION'",
    "gradle-enterprise": "'GRADLE-ENTERPRISE-VERSION'",
    "gradle-git-properties": "'GRADLE-GIT-PROPERTIES-VERSION'",
    "gradle-liquibase": "'GRADLE-LIQUIBASE-VERSION'",
    "gradle-modernizer-plugin": "'GRADLE-MODERNIZER-PLUGIN-VERSION'",
    "gradle-sonarqube": "'GRADLE-SONARQUBE-VERSION'",
    "hazelcast-hibernate53": "'HAZELCAST-HIBERNATE-53-VERSION'",
    "hazelcast-spring": "'HAZELCAST-SPRING-VERSION'",
    "hibernate": "'HIBERNATE-VERSION'",
    "jackson-databind-nullable": "'JACKSON-DATABIND-NULLABLE-VERSION'",
    "jacoco-maven-plugin": "'JACOCO-MAVEN-PLUGIN-VERSION'",
    "jaxb-runtime": "'JAXB-RUNTIME-VERSION'",
    "jib-maven-plugin": "'JIB-MAVEN-PLUGIN-VERSION'",
    "junit-platform-launcher": "'JUNIT-PLATFORM-LAUNCHER-VERSION'",
    "lifecycle-mapping": "'LIFECYCLE-MAPPING-VERSION'",
    "liquibase": "'LIQUIBASE-VERSION'",
    "mapstruct": "'MAPSTRUCT-VERSION'",
    "maven-antrun-plugin": "'MAVEN-ANTRUN-PLUGIN-VERSION'",
    "maven-checkstyle-plugin": "'MAVEN-CHECKSTYLE-PLUGIN-VERSION'",
    "maven-clean-plugin": "'MAVEN-CLEAN-PLUGIN-VERSION'",
    "maven-compiler-plugin": "'MAVEN-COMPILER-PLUGIN-VERSION'",
    "maven-eclipse-plugin": "'MAVEN-ECLIPSE-PLUGIN-VERSION'",
    "maven-enforcer-plugin": "'MAVEN-ENFORCER-PLUGIN-VERSION'",
    "maven-failsafe-plugin": "'MAVEN-FAILSAFE-PLUGIN-VERSION'",
    "maven-idea-plugin": "'MAVEN-IDEA-PLUGIN-VERSION'",
    "maven-jar-plugin": "'MAVEN-JAR-PLUGIN-VERSION'",
    "maven-javadoc-plugin": "'MAVEN-JAVADOC-PLUGIN-VERSION'",
    "maven-resources-plugin": "'MAVEN-RESOURCES-PLUGIN-VERSION'",
    "maven-site-plugin": "'MAVEN-SITE-PLUGIN-VERSION'",
    "maven-surefire-plugin": "'MAVEN-SUREFIRE-PLUGIN-VERSION'",
    "maven-war-plugin": "'MAVEN-WAR-PLUGIN-VERSION'",
    "modernizer-maven-plugin": "'MODERNIZER-MAVEN-PLUGIN-VERSION'",
    "node-gradle": "'NODE-GRADLE-VERSION'",
    "nohttp-checkstyle": "'NOHTTP-CHECKSTYLE-VERSION'",
    "openapi-generator-maven-plugin": "'OPENAPI-GENERATOR-MAVEN-PLUGIN-VERSION'",
    "properties-maven-plugin": "'PROPERTIES-MAVEN-PLUGIN-VERSION'",
    "r2dbc-mariadb": "'R-2-DBC-MARIADB-VERSION'",
    "r2dbc-mysql": "'R-2-DBC-MYSQL-VERSION'",
    "sonar-maven-plugin": "'SONAR-MAVEN-PLUGIN-VERSION'",
    "spring-boot": "'SPRING-BOOT-VERSION'",
    "spring-pulsar": "'SPRING-PULSAR-VERSION'",
    "typesafe": "'TYPESAFE-VERSION'",
    "validation-api": "'VALIDATION-API-VERSION'",
  },
  "javaPackageSrcDir": "src/main/java/com/mycompany/myapp/",
  "javaPackageTestDir": "src/test/java/com/mycompany/myapp/",
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhiTablePrefix": "jhi",
  "jhipsterDependenciesVersion": "JHIPSTER_DEPENDENCIES_VERSION",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": Any<String>,
  "jwtSecretKey": Any<String>,
  "languages": [
    "en",
    "fr",
  ],
  "languagesDefinition": [
    {
      "angularLocale": "en",
      "dayjsLocale": "en",
      "displayName": "English",
      "fakerjsLocale": "en",
      "javaLocaleMessageSourceSuffix": "en",
      "languageTag": "en",
      "name": "English",
      "rtl": false,
    },
    {
      "angularLocale": "fr",
      "dayjsLocale": "fr",
      "displayName": "Français",
      "fakerjsLocale": "fr",
      "javaLocaleMessageSourceSuffix": "fr",
      "languageTag": "fr",
      "name": "French",
      "rtl": false,
    },
  ],
  "lowercaseBaseName": "jhipster",
  "mainClass": "JhipsterApp",
  "mainJavaDir": "src/main/java/",
  "mainJavaPackageDir": "src/main/java/com/mycompany/myapp/",
  "mainJavaResourceDir": "src/main/resources/",
  "messageBroker": "no",
  "messageBrokerAny": false,
  "messageBrokerKafka": false,
  "messageBrokerPulsar": false,
  "microfrontend": false,
  "microfrontends": [],
  "nativeLanguage": "en",
  "nativeLanguageDefinition": {
    "angularLocale": "en",
    "dayjsLocale": "en",
    "displayName": "English",
    "fakerjsLocale": "en",
    "javaLocaleMessageSourceSuffix": "en",
    "languageTag": "en",
    "name": "English",
    "rtl": false,
  },
  "nodeDependencies": {
    "@angular-architects/module-federation-runtime": "ANGULAR_ARCHITECTS_MODULE_FEDERATION_RUNTIME_VERSION",
    "@angular-builders/custom-webpack": "ANGULAR_BUILDERS_CUSTOM_WEBPACK_VERSION",
    "@angular-builders/jest": "ANGULAR_BUILDERS_JEST_VERSION",
    "@angular-eslint/eslint-plugin": "ANGULAR_ESLINT_ESLINT_PLUGIN_VERSION",
    "@angular/cli": "ANGULAR_CLI_VERSION",
    "@angular/common": "ANGULAR_COMMON_VERSION",
    "@cypress/code-coverage": "CYPRESS_CODE_COVERAGE_VERSION",
    "@fortawesome/angular-fontawesome": "FORTAWESOME_ANGULAR_FONTAWESOME_VERSION",
    "@fortawesome/fontawesome-svg-core": "FORTAWESOME_FONTAWESOME_SVG_CORE_VERSION",
    "@fortawesome/free-solid-svg-icons": "FORTAWESOME_FREE_SOLID_SVG_ICONS_VERSION",
    "@ng-bootstrap/ng-bootstrap": "NG_BOOTSTRAP_NG_BOOTSTRAP_VERSION",
    "@ngx-translate/core": "NGX_TRANSLATE_CORE_VERSION",
    "@ngx-translate/http-loader": "NGX_TRANSLATE_HTTP_LOADER_VERSION",
    "@popperjs/core": "POPPERJS_CORE_VERSION",
    "@types/jest": "TYPES_JEST_VERSION",
    "@types/node": "TYPES_NODE_VERSION",
    "@typescript-eslint/eslint-plugin": "TYPESCRIPT_ESLINT_ESLINT_PLUGIN_VERSION",
    "babel-loader": "BABEL_LOADER_VERSION",
    "babel-plugin-istanbul": "BABEL_PLUGIN_ISTANBUL_VERSION",
    "bootstrap": "BOOTSTRAP_VERSION",
    "bootswatch": "BOOTSWATCH_VERSION",
    "browser-sync": "BROWSER_SYNC_VERSION",
    "browser-sync-webpack-plugin": "BROWSER_SYNC_WEBPACK_PLUGIN_VERSION",
    "concurrently": "CONCURRENTLY_VERSION",
    "copy-webpack-plugin": "COPY_WEBPACK_PLUGIN_VERSION",
    "cypress": "CYPRESS_VERSION",
    "cypress-audit": "CYPRESS_AUDIT_VERSION",
    "dayjs": "DAYJS_VERSION",
    "eslint": "ESLINT_VERSION",
    "eslint-config-prettier": "ESLINT_CONFIG_PRETTIER_VERSION",
    "eslint-plugin-cypress": "ESLINT_PLUGIN_CYPRESS_VERSION",
    "eslint-webpack-plugin": "ESLINT_WEBPACK_PLUGIN_VERSION",
    "folder-hash": "FOLDER_HASH_VERSION",
    "husky": "HUSKY_VERSION",
    "jest": "JEST_VERSION",
    "jest-date-mock": "JEST_DATE_MOCK_VERSION",
    "jest-junit": "JEST_JUNIT_VERSION",
    "jest-preset-angular": "JEST_PRESET_ANGULAR_VERSION",
    "jest-sonar": "JEST_SONAR_VERSION",
    "lighthouse": "LIGHTHOUSE_VERSION",
    "lint-staged": "LINT_STAGED_VERSION",
    "merge-jsons-webpack-plugin": "MERGE_JSONS_WEBPACK_PLUGIN_VERSION",
    "ngx-cookie-service": "NGX_COOKIE_SERVICE_VERSION",
    "ngx-infinite-scroll": "NGX_INFINITE_SCROLL_VERSION",
    "npm": "NPM_VERSION",
    "nyc": "NYC_VERSION",
    "postcss-rtlcss": "POSTCSS_RTLCSS_VERSION",
    "prettier": "PRETTIER_VERSION",
    "prettier-plugin-java": "PRETTIER_PLUGIN_JAVA_VERSION",
    "prettier-plugin-packagejson": "PRETTIER_PLUGIN_PACKAGEJSON_VERSION",
    "rimraf": "RIMRAF_VERSION",
    "rxjs": "RXJS_VERSION",
    "swagger-ui-dist": "SWAGGER_UI_DIST_VERSION",
    "ts-jest": "TS_JEST_VERSION",
    "tslib": "TSLIB_VERSION",
    "typescript": "TYPESCRIPT_VERSION",
    "wait-on": "WAIT_ON_VERSION",
    "webpack": "WEBPACK_VERSION",
    "webpack-bundle-analyzer": "WEBPACK_BUNDLE_ANALYZER_VERSION",
    "webpack-merge": "WEBPACK_MERGE_VERSION",
    "webpack-notifier": "WEBPACK_NOTIFIER_VERSION",
    "zone.js": "ZONE_JS_VERSION",
  },
  "nodePackageManager": "npm",
  "nodeVersion": "NODE_VERSION",
  "packageFolder": "com/mycompany/myapp/",
  "packageInfoJavadocs": [
    {
      "documentation": "Logging aspect.",
      "packageName": "com.mycompany.myapp.aop.logging",
    },
    {
      "documentation": "Application management.",
      "packageName": "com.mycompany.myapp.management",
    },
    {
      "documentation": "Webflux database column mapper.",
      "packageName": "com.mycompany.myapp.repository.rowmapper",
    },
    {
      "documentation": "Application security utilities.",
      "packageName": "com.mycompany.myapp.security",
    },
    {
      "documentation": "Data transfer objects for rest mapping.",
      "packageName": "com.mycompany.myapp.service.dto",
    },
    {
      "documentation": "Data transfer objects mappers.",
      "packageName": "com.mycompany.myapp.service.mapper",
    },
    {
      "documentation": "Request chain filters.",
      "packageName": "com.mycompany.myapp.web.filter",
    },
    {
      "documentation": "Rest layer error handling.",
      "packageName": "com.mycompany.myapp.web.rest.errors",
    },
    {
      "documentation": "Rest layer visual models.",
      "packageName": "com.mycompany.myapp.web.rest.vm",
    },
  ],
  "packageName": "com.mycompany.myapp",
  "pages": [],
  "prettierExtensions": "md,json,yml,html,cjs,mjs,js,ts,tsx,css,scss,java",
  "prettierJava": undefined,
  "prettierTabWidth": 2,
  "prodDatabaseExtraOptions": "",
  "prodDatabasePassword": "",
  "prodDatabaseType": "postgresql",
  "prodDatabaseTypeH2Disk": false,
  "prodDatabaseTypeMariadb": false,
  "prodDatabaseTypeMssql": false,
  "prodDatabaseTypeMysql": false,
  "prodDatabaseTypeOracle": false,
  "prodDatabaseTypePostgres": true,
  "prodDatabaseUsername": "jhipster",
  "prodHibernateDialect": "org.hibernate.dialect.PostgreSQLDialect",
  "prodJdbcDriver": "org.postgresql.Driver",
  "prodJdbcUrl": "jdbc:postgresql://localhost:5432/jhipster",
  "prodLiquibaseUrl": "jdbc:postgresql://localhost:5432/jhipster",
  "prodR2dbcUrl": "r2dbc:postgresql://localhost:5432/jhipster",
  "projectDescription": "Description for JHipster",
  "projectVersion": "0.0.1-SNAPSHOT",
  "reactive": true,
  "rememberMeKey": undefined,
  "remotes": [],
  "searchEngine": "no",
  "searchEngineAny": false,
  "searchEngineCouchbase": false,
  "searchEngineElasticsearch": false,
  "searchEngineNo": true,
  "serverPort": 8080,
  "serviceDiscoveryAny": true,
  "serviceDiscoveryConsul": true,
  "serviceDiscoveryEureka": false,
  "serviceDiscoveryType": "consul",
  "skipCheckLengthOfIdentifier": false,
  "skipClient": false,
  "skipCommitHook": undefined,
  "skipFakeData": false,
  "skipJhipsterDependencies": false,
  "skipServer": undefined,
  "skipUserManagement": false,
  "srcMainDir": "src/main/",
  "srcMainJava": "src/main/java/",
  "srcMainResources": "src/main/resources/",
  "srcMainWebapp": "src/main/webapp/",
  "srcTestDir": "src/test/",
  "srcTestJava": "src/test/java/",
  "srcTestJavascript": "src/test/javascript/",
  "srcTestResources": "src/test/resources/",
  "temporaryDir": "target/",
  "testFrameworks": [],
  "testJavaDir": "src/test/java/",
  "testJavaPackageDir": "src/test/java/com/mycompany/myapp/",
  "testResourceDir": "src/test/resources/",
  "upperFirstCamelCaseBaseName": "Jhipster",
  "user": Any<Object>,
  "webappEnumerationsDir": "src/main/webapp/app/entities/enumerations/",
  "webappLoginRegExp": "^[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\.[a-zA-Z0-9-]+)*$|^[_.@A-Za-z0-9-]+$",
  "websocket": "no",
  "withAdminUi": true,
}
`;

exports[`generator - app with microservice should match snapshot 1`] = `
{
  "ANGULAR": "angular",
  "CLIENT_WEBPACK_DIR": "webpack/",
  "DOCUMENTATION_ARCHIVE_PATH": "/documentation-archive/",
  "DOCUMENTATION_URL": "https://www.jhipster.tech",
  "JAVA_COMPATIBLE_VERSIONS": [
    "17",
    "18",
    "19",
  ],
  "JAVA_VERSION": "JAVA_VERSION",
  "LOGIN_REGEX": "^(?>[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\.[a-zA-Z0-9-]+)*)|(?>[_.@A-Za-z0-9-]+)$",
  "MAIN_DIR": "src/main/",
  "REACT": "react",
  "SERVER_MAIN_RES_DIR": "src/main/resources/",
  "SERVER_MAIN_SRC_DIR": "src/main/java/",
  "SERVER_TEST_RES_DIR": "src/test/resources/",
  "SERVER_TEST_SRC_DIR": "src/test/java/",
  "TEST_DIR": "src/test/",
  "VUE": "vue",
  "addSpringMilestoneRepository": false,
  "applicationType": "microservice",
  "applicationTypeGateway": false,
  "applicationTypeMicroservice": true,
  "applicationTypeMonolith": false,
  "authenticationType": "jwt",
  "authenticationTypeJwt": true,
  "authenticationTypeOauth2": false,
  "authenticationTypeSession": false,
  "authenticationUsesCsrf": false,
  "backendType": "Java",
  "baseName": "jhipster",
  "blueprints": [],
  "buildTool": "maven",
  "buildToolGradle": false,
  "buildToolMaven": true,
  "buildToolUnknown": false,
  "cacheProvider": "hazelcast",
  "cacheProviderAny": true,
  "cacheProviderCaffeine": false,
  "cacheProviderEhcache": false,
  "cacheProviderHazelcast": true,
  "cacheProviderInfinispan": false,
  "cacheProviderMemcached": false,
  "cacheProviderNo": false,
  "cacheProviderRedis": false,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "clientDistDir": "target/classes/static/",
  "clientFramework": "no",
  "clientFrameworkAngular": false,
  "clientFrameworkAny": false,
  "clientFrameworkNo": true,
  "clientFrameworkReact": false,
  "clientFrameworkVue": false,
  "clientPackageManager": "npm",
  "clientSrcDir": "src/main/webapp/",
  "clientTestDir": "src/test/javascript/",
  "clientTheme": undefined,
  "clientThemeDark": false,
  "clientThemeLight": false,
  "clientThemeNone": false,
  "clientThemePrimary": false,
  "clientThemeVariant": undefined,
  "communicationSpringWebsocket": false,
  "cucumberTests": false,
  "cypressTests": false,
  "dasherizedBaseName": "jhipster",
  "databaseMigration": undefined,
  "databaseMigrationLiquibase": true,
  "databaseType": "sql",
  "databaseTypeAny": true,
  "databaseTypeCassandra": false,
  "databaseTypeCouchbase": false,
  "databaseTypeMariadb": false,
  "databaseTypeMongodb": false,
  "databaseTypeMysql": false,
  "databaseTypeNeo4j": false,
  "databaseTypeNo": false,
  "databaseTypePostgres": true,
  "databaseTypeSql": true,
  "defaultEnvironment": "prod",
  "defaultPackaging": "jar",
  "devDatabaseExtraOptions": "",
  "devDatabasePassword": "",
  "devDatabaseType": "h2Disk",
  "devDatabaseTypeH2Any": true,
  "devDatabaseTypeH2Disk": true,
  "devDatabaseTypeH2Memory": false,
  "devDatabaseTypeMariadb": false,
  "devDatabaseTypeMssql": false,
  "devDatabaseTypeMysql": false,
  "devDatabaseTypeOracle": false,
  "devDatabaseTypePostgres": false,
  "devDatabaseUsername": "jhipster",
  "devHibernateDialect": "org.hibernate.dialect.H2Dialect",
  "devJdbcDriver": "org.h2.Driver",
  "devJdbcUrl": "jdbc:h2:file:./target/h2db/db/jhipster;DB_CLOSE_DELAY=-1",
  "devLiquibaseUrl": "jdbc:h2:file:\${project.build.directory}/h2db/db/jhipster",
  "devServerPort": undefined,
  "dockerContainers": {
    "apachepulsar/pulsar": "apachepulsar-pulsar-placeholder",
    "cassandra": "cassandra-placeholder",
    "cassandraImage": "cassandra-image-placeholder",
    "cassandraTag": "cassandra-tag-placeholder",
    "confluentinc/cp-kafka": "confluentinc-cp-kafka-placeholder",
    "confluentinc/cp-zookeeper": "confluentinc-cp-zookeeper-placeholder",
    "consul": "consul-placeholder",
    "consulConfigLoader": "consul-config-loader-placeholder",
    "consulConfigLoaderImage": "consul-config-loader-image-placeholder",
    "consulConfigLoaderTag": "consul-config-loader-tag-placeholder",
    "consulImage": "consul-image-placeholder",
    "consulTag": "consul-tag-placeholder",
    "couchbase": "couchbase-placeholder",
    "couchbase/server": "couchbase-server-placeholder",
    "couchbaseImage": "couchbase-image-placeholder",
    "couchbaseTag": "couchbase-tag-placeholder",
    "docker.io/bitnami/consul": "docker-io-bitnami-consul-placeholder",
    "eclipse-temurin": "eclipse-temurin-placeholder",
    "eclipseTemurin": "eclipse-temurin-placeholder",
    "eclipseTemurinImage": "eclipse-temurin-image-placeholder",
    "eclipseTemurinTag": "eclipse-temurin-tag-placeholder",
    "elasticsearch": "elasticsearch-placeholder",
    "elasticsearchImage": "elasticsearch-image-placeholder",
    "elasticsearchTag": "elasticsearch-tag-placeholder",
    "grafana": "grafana-placeholder",
    "grafana/grafana": "grafana-grafana-placeholder",
    "grafanaImage": "grafana-image-placeholder",
    "grafanaTag": "grafana-tag-placeholder",
    "grafanaWatcher": "grafana-watcher-placeholder",
    "grafanaWatcherImage": "grafana-watcher-image-placeholder",
    "grafanaWatcherTag": "grafana-watcher-tag-placeholder",
    "hazelcast": "hazelcast-placeholder",
    "hazelcast/management-center": "hazelcast-management-center-placeholder",
    "hazelcastImage": "hazelcast-image-placeholder",
    "hazelcastTag": "hazelcast-tag-placeholder",
    "javaJre": "java-jre-placeholder",
    "javaJreImage": "java-jre-image-placeholder",
    "javaJreTag": "java-jre-tag-placeholder",
    "jenkins": "jenkins-placeholder",
    "jenkins/jenkins": "jenkins-jenkins-placeholder",
    "jenkinsImage": "jenkins-image-placeholder",
    "jenkinsTag": "jenkins-tag-placeholder",
    "jhipster/consul-config-loader": "jhipster-consul-config-loader-placeholder",
    "jhipster/jhipster-control-center": "jhipster-jhipster-control-center-placeholder",
    "jhipster/jhipster-registry": "jhipster-jhipster-registry-placeholder",
    "jhipsterControlCenter": "jhipster-control-center-placeholder",
    "jhipsterControlCenterImage": "jhipster-control-center-image-placeholder",
    "jhipsterControlCenterTag": "jhipster-control-center-tag-placeholder",
    "jhipsterRegistry": "jhipster-registry-placeholder",
    "jhipsterRegistryImage": "jhipster-registry-image-placeholder",
    "jhipsterRegistryTag": "jhipster-registry-tag-placeholder",
    "kafka": "kafka-placeholder",
    "kafkaImage": "kafka-image-placeholder",
    "kafkaTag": "kafka-tag-placeholder",
    "keycloak": "keycloak-placeholder",
    "keycloakImage": "keycloak-image-placeholder",
    "keycloakTag": "keycloak-tag-placeholder",
    "mariadb": "mariadb-placeholder",
    "mariadbImage": "mariadb-image-placeholder",
    "mariadbTag": "mariadb-tag-placeholder",
    "mcr.microsoft.com/mssql/server": "mcr-microsoft-com-mssql-server-placeholder",
    "memcached": "memcached-placeholder",
    "memcachedImage": "memcached-image-placeholder",
    "memcachedTag": "memcached-tag-placeholder",
    "mongo": "mongo-placeholder",
    "mongoImage": "mongo-image-placeholder",
    "mongoTag": "mongo-tag-placeholder",
    "mongodb": "mongodb-placeholder",
    "mongodbImage": "mongodb-image-placeholder",
    "mongodbTag": "mongodb-tag-placeholder",
    "mssql": "mssql-placeholder",
    "mssqlImage": "mssql-image-placeholder",
    "mssqlTag": "mssql-tag-placeholder",
    "mysql": "mysql-placeholder",
    "mysqlImage": "mysql-image-placeholder",
    "mysqlTag": "mysql-tag-placeholder",
    "neo4J": "neo-4-j-placeholder",
    "neo4JImage": "neo-4-j-image-placeholder",
    "neo4JTag": "neo-4-j-tag-placeholder",
    "neo4j": "neo-4-j-placeholder",
    "openzipkin/zipkin": "openzipkin-zipkin-placeholder",
    "postgres": "postgres-placeholder",
    "postgresImage": "postgres-image-placeholder",
    "postgresTag": "postgres-tag-placeholder",
    "postgresql": "postgresql-placeholder",
    "postgresqlImage": "postgresql-image-placeholder",
    "postgresqlTag": "postgresql-tag-placeholder",
    "prom/alertmanager": "prom-alertmanager-placeholder",
    "prom/prometheus": "prom-prometheus-placeholder",
    "prometheus": "prometheus-placeholder",
    "prometheusAlertmanager": "prometheus-alertmanager-placeholder",
    "prometheusAlertmanagerImage": "prometheus-alertmanager-image-placeholder",
    "prometheusAlertmanagerTag": "prometheus-alertmanager-tag-placeholder",
    "prometheusImage": "prometheus-image-placeholder",
    "prometheusOperator": "prometheus-operator-placeholder",
    "prometheusOperatorImage": "prometheus-operator-image-placeholder",
    "prometheusOperatorTag": "prometheus-operator-tag-placeholder",
    "prometheusTag": "prometheus-tag-placeholder",
    "pulsar": "pulsar-placeholder",
    "pulsarImage": "pulsar-image-placeholder",
    "pulsarTag": "pulsar-tag-placeholder",
    "quay.io/coreos/grafana-watcher": "quay-io-coreos-grafana-watcher-placeholder",
    "quay.io/coreos/prometheus-operator": "quay-io-coreos-prometheus-operator-placeholder",
    "quay.io/keycloak/keycloak": "quay-io-keycloak-keycloak-placeholder",
    "redis": "redis-placeholder",
    "redisImage": "redis-image-placeholder",
    "redisTag": "redis-tag-placeholder",
    "sonar": "sonar-placeholder",
    "sonarImage": "sonar-image-placeholder",
    "sonarTag": "sonar-tag-placeholder",
    "sonarqube": "sonarqube-placeholder",
    "sonarqubeImage": "sonarqube-image-placeholder",
    "sonarqubeTag": "sonarqube-tag-placeholder",
    "swaggerEditor": "swagger-editor-placeholder",
    "swaggerEditorImage": "swagger-editor-image-placeholder",
    "swaggerEditorTag": "swagger-editor-tag-placeholder",
    "swaggerapi/swagger-editor": "swaggerapi-swagger-editor-placeholder",
    "zipkin": "zipkin-placeholder",
    "zipkinImage": "zipkin-image-placeholder",
    "zipkinTag": "zipkin-tag-placeholder",
    "zookeeper": "zookeeper-placeholder",
    "zookeeperImage": "zookeeper-image-placeholder",
    "zookeeperTag": "zookeeper-tag-placeholder",
  },
  "dockerServicesDir": "src/main/docker/",
  "domains": [
    "com.mycompany.myapp",
  ],
  "dtoSuffix": "DTO",
  "embeddableLaunchScript": undefined,
  "enableGradleEnterprise": false,
  "enableHibernateCache": true,
  "enableI18nRTL": false,
  "enableSwaggerCodegen": false,
  "enableTranslation": true,
  "endpointPrefix": "services/jhipster",
  "entitySuffix": "",
  "fakerSeed": undefined,
  "frontendAppName": "jhipsterApp",
  "gatewayServerPort": undefined,
  "gatlingTests": false,
  "generateAuthenticationApi": false,
  "generateBuiltInAuthorityEntity": false,
  "generateBuiltInUserEntity": false,
  "generateInMemoryUserCredentials": false,
  "generateUserManagement": false,
  "gradleVersion": "GRADLE_VERSION",
  "hipster": "jhipster_family_member_3",
  "humanizedBaseName": "JHipster",
  "imperativeOrReactive": "imperative",
  "incrementalChangelog": undefined,
  "javaDependencies": {
    "archunit-junit5": "'ARCHUNIT-JUNIT-5-VERSION'",
    "awaitility": "'AWAITILITY-VERSION'",
    "blockhound-junit-platform": "'BLOCKHOUND-JUNIT-PLATFORM-VERSION'",
    "cassandra": "'CASSANDRA-VERSION'",
    "checkstyle": "'CHECKSTYLE-VERSION'",
    "checksum-maven-plugin": "'CHECKSUM-MAVEN-PLUGIN-VERSION'",
    "common-custom-user-data-gradle-plugin": "'COMMON-CUSTOM-USER-DATA-GRADLE-PLUGIN-VERSION'",
    "commons-beanutils": "'COMMONS-BEANUTILS-VERSION'",
    "frontend-maven-plugin": "'FRONTEND-MAVEN-PLUGIN-VERSION'",
    "gatling": "'GATLING-VERSION'",
    "gatling-gradle": "'GATLING-GRADLE-VERSION'",
    "gatling-maven-plugin": "'GATLING-MAVEN-PLUGIN-VERSION'",
    "git-commit-id-plugin": "'GIT-COMMIT-ID-PLUGIN-VERSION'",
    "gradle-enterprise": "'GRADLE-ENTERPRISE-VERSION'",
    "gradle-git-properties": "'GRADLE-GIT-PROPERTIES-VERSION'",
    "gradle-liquibase": "'GRADLE-LIQUIBASE-VERSION'",
    "gradle-modernizer-plugin": "'GRADLE-MODERNIZER-PLUGIN-VERSION'",
    "gradle-sonarqube": "'GRADLE-SONARQUBE-VERSION'",
    "hazelcast-hibernate53": "'HAZELCAST-HIBERNATE-53-VERSION'",
    "hazelcast-spring": "'HAZELCAST-SPRING-VERSION'",
    "hibernate": "'HIBERNATE-VERSION'",
    "jackson-databind-nullable": "'JACKSON-DATABIND-NULLABLE-VERSION'",
    "jacoco-maven-plugin": "'JACOCO-MAVEN-PLUGIN-VERSION'",
    "jaxb-runtime": "'JAXB-RUNTIME-VERSION'",
    "jib-maven-plugin": "'JIB-MAVEN-PLUGIN-VERSION'",
    "junit-platform-launcher": "'JUNIT-PLATFORM-LAUNCHER-VERSION'",
    "lifecycle-mapping": "'LIFECYCLE-MAPPING-VERSION'",
    "liquibase": "'LIQUIBASE-VERSION'",
    "mapstruct": "'MAPSTRUCT-VERSION'",
    "maven-antrun-plugin": "'MAVEN-ANTRUN-PLUGIN-VERSION'",
    "maven-checkstyle-plugin": "'MAVEN-CHECKSTYLE-PLUGIN-VERSION'",
    "maven-clean-plugin": "'MAVEN-CLEAN-PLUGIN-VERSION'",
    "maven-compiler-plugin": "'MAVEN-COMPILER-PLUGIN-VERSION'",
    "maven-eclipse-plugin": "'MAVEN-ECLIPSE-PLUGIN-VERSION'",
    "maven-enforcer-plugin": "'MAVEN-ENFORCER-PLUGIN-VERSION'",
    "maven-failsafe-plugin": "'MAVEN-FAILSAFE-PLUGIN-VERSION'",
    "maven-idea-plugin": "'MAVEN-IDEA-PLUGIN-VERSION'",
    "maven-jar-plugin": "'MAVEN-JAR-PLUGIN-VERSION'",
    "maven-javadoc-plugin": "'MAVEN-JAVADOC-PLUGIN-VERSION'",
    "maven-resources-plugin": "'MAVEN-RESOURCES-PLUGIN-VERSION'",
    "maven-site-plugin": "'MAVEN-SITE-PLUGIN-VERSION'",
    "maven-surefire-plugin": "'MAVEN-SUREFIRE-PLUGIN-VERSION'",
    "maven-war-plugin": "'MAVEN-WAR-PLUGIN-VERSION'",
    "modernizer-maven-plugin": "'MODERNIZER-MAVEN-PLUGIN-VERSION'",
    "node-gradle": "'NODE-GRADLE-VERSION'",
    "nohttp-checkstyle": "'NOHTTP-CHECKSTYLE-VERSION'",
    "openapi-generator-maven-plugin": "'OPENAPI-GENERATOR-MAVEN-PLUGIN-VERSION'",
    "properties-maven-plugin": "'PROPERTIES-MAVEN-PLUGIN-VERSION'",
    "r2dbc-mariadb": "'R-2-DBC-MARIADB-VERSION'",
    "r2dbc-mysql": "'R-2-DBC-MYSQL-VERSION'",
    "sonar-maven-plugin": "'SONAR-MAVEN-PLUGIN-VERSION'",
    "spring-boot": "'SPRING-BOOT-VERSION'",
    "spring-pulsar": "'SPRING-PULSAR-VERSION'",
    "typesafe": "'TYPESAFE-VERSION'",
    "validation-api": "'VALIDATION-API-VERSION'",
  },
  "javaPackageSrcDir": "src/main/java/com/mycompany/myapp/",
  "javaPackageTestDir": "src/test/java/com/mycompany/myapp/",
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhiTablePrefix": "jhi",
  "jhipsterDependenciesVersion": "JHIPSTER_DEPENDENCIES_VERSION",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": Any<String>,
  "jwtSecretKey": Any<String>,
  "languages": [
    "en",
    "fr",
  ],
  "languagesDefinition": [
    {
      "angularLocale": "en",
      "dayjsLocale": "en",
      "displayName": "English",
      "fakerjsLocale": "en",
      "javaLocaleMessageSourceSuffix": "en",
      "languageTag": "en",
      "name": "English",
      "rtl": false,
    },
    {
      "angularLocale": "fr",
      "dayjsLocale": "fr",
      "displayName": "Français",
      "fakerjsLocale": "fr",
      "javaLocaleMessageSourceSuffix": "fr",
      "languageTag": "fr",
      "name": "French",
      "rtl": false,
    },
  ],
  "lowercaseBaseName": "jhipster",
  "mainClass": "JhipsterApp",
  "mainJavaDir": "src/main/java/",
  "mainJavaPackageDir": "src/main/java/com/mycompany/myapp/",
  "mainJavaResourceDir": "src/main/resources/",
  "messageBroker": "no",
  "messageBrokerAny": false,
  "messageBrokerKafka": false,
  "messageBrokerPulsar": false,
  "microfrontend": false,
  "microfrontends": [],
  "nativeLanguage": "en",
  "nativeLanguageDefinition": {
    "angularLocale": "en",
    "dayjsLocale": "en",
    "displayName": "English",
    "fakerjsLocale": "en",
    "javaLocaleMessageSourceSuffix": "en",
    "languageTag": "en",
    "name": "English",
    "rtl": false,
  },
  "nodeDependencies": {
    "concurrently": "CONCURRENTLY_VERSION",
    "husky": "HUSKY_VERSION",
    "lint-staged": "LINT_STAGED_VERSION",
    "npm": "NPM_VERSION",
    "prettier": "PRETTIER_VERSION",
    "prettier-plugin-java": "PRETTIER_PLUGIN_JAVA_VERSION",
    "prettier-plugin-packagejson": "PRETTIER_PLUGIN_PACKAGEJSON_VERSION",
    "wait-on": "WAIT_ON_VERSION",
  },
  "nodePackageManager": "npm",
  "nodeVersion": "NODE_VERSION",
  "packageFolder": "com/mycompany/myapp/",
  "packageInfoJavadocs": [
    {
      "documentation": "Logging aspect.",
      "packageName": "com.mycompany.myapp.aop.logging",
    },
    {
      "documentation": "Application management.",
      "packageName": "com.mycompany.myapp.management",
    },
    {
      "documentation": "Webflux database column mapper.",
      "packageName": "com.mycompany.myapp.repository.rowmapper",
    },
    {
      "documentation": "Application security utilities.",
      "packageName": "com.mycompany.myapp.security",
    },
    {
      "documentation": "Data transfer objects for rest mapping.",
      "packageName": "com.mycompany.myapp.service.dto",
    },
    {
      "documentation": "Data transfer objects mappers.",
      "packageName": "com.mycompany.myapp.service.mapper",
    },
    {
      "documentation": "Request chain filters.",
      "packageName": "com.mycompany.myapp.web.filter",
    },
    {
      "documentation": "Rest layer error handling.",
      "packageName": "com.mycompany.myapp.web.rest.errors",
    },
    {
      "documentation": "Rest layer visual models.",
      "packageName": "com.mycompany.myapp.web.rest.vm",
    },
  ],
  "packageName": "com.mycompany.myapp",
  "pages": [],
  "prettierExtensions": "md,json,yml,html,java",
  "prettierJava": undefined,
  "prettierTabWidth": 2,
  "prodDatabaseExtraOptions": "",
  "prodDatabasePassword": "",
  "prodDatabaseType": "postgresql",
  "prodDatabaseTypeH2Disk": false,
  "prodDatabaseTypeMariadb": false,
  "prodDatabaseTypeMssql": false,
  "prodDatabaseTypeMysql": false,
  "prodDatabaseTypeOracle": false,
  "prodDatabaseTypePostgres": true,
  "prodDatabaseUsername": "jhipster",
  "prodHibernateDialect": "org.hibernate.dialect.PostgreSQLDialect",
  "prodJdbcDriver": "org.postgresql.Driver",
  "prodJdbcUrl": "jdbc:postgresql://localhost:5432/jhipster",
  "prodLiquibaseUrl": "jdbc:postgresql://localhost:5432/jhipster",
  "projectDescription": "Description for JHipster",
  "projectVersion": "0.0.1-SNAPSHOT",
  "reactive": false,
  "rememberMeKey": undefined,
  "remotes": [],
  "searchEngine": "no",
  "searchEngineAny": false,
  "searchEngineCouchbase": false,
  "searchEngineElasticsearch": false,
  "searchEngineNo": true,
  "serverPort": 8081,
  "serviceDiscoveryAny": true,
  "serviceDiscoveryConsul": true,
  "serviceDiscoveryEureka": false,
  "serviceDiscoveryType": "consul",
  "skipCheckLengthOfIdentifier": false,
  "skipClient": true,
  "skipCommitHook": undefined,
  "skipFakeData": false,
  "skipJhipsterDependencies": false,
  "skipServer": undefined,
  "skipUserManagement": true,
  "srcMainDir": "src/main/",
  "srcMainJava": "src/main/java/",
  "srcMainResources": "src/main/resources/",
  "srcMainWebapp": "src/main/webapp/",
  "srcTestDir": "src/test/",
  "srcTestJava": "src/test/java/",
  "srcTestJavascript": "src/test/javascript/",
  "srcTestResources": "src/test/resources/",
  "temporaryDir": "target/",
  "testFrameworks": [],
  "testJavaDir": "src/test/java/",
  "testJavaPackageDir": "src/test/java/com/mycompany/myapp/",
  "testResourceDir": "src/test/resources/",
  "upperFirstCamelCaseBaseName": "Jhipster",
  "websocket": "no",
  "withAdminUi": false,
}
`;
